FE_221105_fix : 날짜 표시, 메인-상세 프로필 형식, 헤더 추가
Former-commit-id: 03f317586281199f8d8c48e284a6c9c1a8d2b92b

--- a/android/app/src/main/res/layout/fragment_record_letter_detail.xml
+++ b/android/app/src/main/res/layout/fragment_record_letter_detail.xml
@@ -7,6 +7,23 @@
     android:layout_height="match_parent"
     tools:context=".RecordBoardFragment"
     android:orientation="vertical">
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/letter_detail_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/letter_detail_appbar"
+            style="@style/Widget.MaterialComponents.Toolbar.Surface"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:minHeight="48dp"
+            android:text="백문백답"
+            app:maxButtonHeight="48dp"
+            app:titleCentered="true"
+            app:titleTextAppearance="@style/TextAppearance.AppCompat.Medium" />
+    </com.google.android.material.appbar.AppBarLayout>
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
