--- a/android/app/src/main/res/layout/fragment_record_board_detail.xml
+++ b/android/app/src/main/res/layout/fragment_record_board_detail.xml
@@ -2,11 +2,14 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+
     <data>
+
         <variable
             name="viewmodel"
             type="com.ssafy.zip.android.viewmodel.BoardDetailViewModel" />
     </data>
+
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -16,8 +19,8 @@
             android:id="@+id/board_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".RecordBoardFragment"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            tools:context=".RecordBoardFragment">
 
             <!--    조건을 넣어서 , 어떤걸 보여줄지 정하는 느낌?-->
             <com.google.android.material.appbar.AppBarLayout
@@ -25,17 +28,19 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="parent">
+
                 <com.google.android.material.appbar.MaterialToolbar
                     android:id="@+id/board_detail_appbar"
                     style="@style/Widget.MaterialComponents.Toolbar.Surface"
                     android:layout_width="match_parent"
                     android:layout_height="48dp"
                     android:minHeight="48dp"
-                    app:maxButtonHeight="48dp"
                     android:text="게시글 상세"
-                    app:titleTextAppearance="@style/TextAppearance.AppCompat.Medium"
-                    app:titleCentered="true"/>
+                    app:maxButtonHeight="48dp"
+                    app:titleCentered="true"
+                    app:titleTextAppearance="@style/TextAppearance.AppCompat.Medium" />
             </com.google.android.material.appbar.AppBarLayout>
+
             <com.google.android.material.divider.MaterialDivider
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
@@ -47,45 +52,47 @@
                 android:id="@+id/topContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/profileContanier"
                     android:layout_width="match_parent"
-                    android:layout_height="60dp"
+                    android:layout_height="wrap_content"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:padding="8dp">
+
 
                     <com.google.android.material.imageview.ShapeableImageView
                         android:id="@+id/profileImageDetail"
                         android:layout_width="40dp"
                         android:layout_height="40dp"
-                        android:layout_marginStart="8dp"
-                        android:scaleType="centerCrop"
-                        app:shapeAppearanceOverlay="@style/circleImageView"
                         android:adjustViewBounds="true"
+                        android:scaleType="centerCrop"
                         app:layout_constraintBottom_toBottomOf="@id/profileContanier"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="@id/profileContanier" />
+                        app:layout_constraintTop_toTopOf="@id/profileContanier"
+                        app:shapeAppearanceOverlay="@style/circleImageView" />
 
                     <TextView
                         android:id="@+id/userNicknameDetail"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="15sp"
-                        android:textColor="@color/black"
-                        android:textStyle="bold"
                         android:layout_marginStart="8dp"
+                        android:textColor="@color/black"
+                        android:textSize="15sp"
+                        android:textStyle="bold"
                         app:layout_constraintBottom_toTopOf="@+id/boardRegDetail"
                         app:layout_constraintStart_toEndOf="@id/profileImageDetail"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintVertical_bias="0.5"
-                        app:layout_constraintVertical_chainStyle="packed"/>
+                        app:layout_constraintVertical_chainStyle="packed" />
 
                     <TextView
                         android:id="@+id/boardRegDetail"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="10sp"
                         android:layout_marginStart="8dp"
+                        android:textSize="10sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toEndOf="@id/profileImageDetail"
                         app:layout_constraintTop_toBottomOf="@+id/userNicknameDetail"
@@ -99,10 +106,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:adjustViewBounds="true"
-                    app:layout_constraintTop_toBottomOf="@id/profileContanier"
                     app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/profileContanier"
 
                     >
+
                     <ImageView
                         android:id="@+id/boardImageDetail"
                         android:layout_width="match_parent"
@@ -114,31 +122,35 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <com.google.android.material.divider.MaterialDivider
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                tools:ignore="MissingConstraints">
+<!--            <com.google.android.material.divider.MaterialDivider-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="1dp"-->
+<!--                tools:ignore="MissingConstraints">-->
 
-            </com.google.android.material.divider.MaterialDivider>
+<!--            </com.google.android.material.divider.MaterialDivider>-->
+
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/boardContentContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:padding="20dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/topContainer">
+
                 <TextView
                     android:id="@+id/boardContent"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
                     android:textColor="@color/black"
                     app:layout_constraintStart_toStartOf="@id/boardContentContainer"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:layout_margin="8dp">
+                    app:layout_constraintTop_toTopOf="parent">
 
                 </TextView>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
+
             <com.google.android.material.divider.MaterialDivider
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
@@ -150,20 +162,20 @@
                 android:id="@+id/bottomContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+
                 <EditText
                     android:id="@+id/commentContent"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="100dp"
+                    android:background="@drawable/edittext_inputtext"
+                    android:hint="@string/edittext_hint"
+                    android:inputType="textMultiLine"
                     app:layout_constraintBottom_toBottomOf="@+id/bottomContainer"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/bottomContainer"
-                    android:inputType="textMultiLine"
-                    android:hint="@string/edittext_hint"
-                    android:background="@drawable/edittext_inputtext"
-                    android:layout_marginEnd="100dp"
-                    android:layout_marginStart="8dp"
-                   >
-                </EditText>
+                    app:layout_constraintTop_toTopOf="@+id/bottomContainer"></EditText>
+
                 <Button
                     android:id="@+id/commentPostBtn"
                     android:layout_width="wrap_content"
