--- a/android/app/src/main/res/layout/qna_item.xml
+++ b/android/app/src/main/res/layout/qna_item.xml
@@ -17,7 +17,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <androidx.constraintlayout.utils.widget.ImageFilterButton
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/q"
             android:layout_width="40dp"
             android:layout_height="40dp"
