FE_221106_fix : 댓글 이모티콘 회색-작게, 메일 outlined 변경, 작성폼들 padding 0, 추후 수정 필요
Former-commit-id: a971f9cf4f2ebb8e23b38a7fb1e06b2eba3e27af

--- a/android/app/src/main/res/layout/fragment_record_board.xml
+++ b/android/app/src/main/res/layout/fragment_record_board.xml
@@ -8,8 +8,10 @@
             type="com.ssafy.zip.android.viewmodel.BoardViewModel" />
     </data>
     <FrameLayout
+        android:id="@+id/board_frame"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:paddingBottom="56dp"
         >
         <LinearLayout
             android:id="@+id/board_recycler_view"
