--- a/android/app/src/main/res/layout/board_item.xml
+++ b/android/app/src/main/res/layout/board_item.xml
@@ -98,12 +98,11 @@
             android:id="@+id/commentButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="4dp"
-            android:layout_marginBottom="8dp"
-            android:src="@drawable/ic_comment_show"
-            app:layout_constraintTop_toBottomOf="@id/commentContainer"
+            android:layout_marginEnd="2dp"
+            android:src="@drawable/ic_outline_comment_16"
+            app:layout_constraintBottom_toBottomOf="@+id/commentCnt"
             app:layout_constraintEnd_toStartOf="@id/commentCnt"
-     >
+            >
 
         </androidx.constraintlayout.utils.widget.ImageFilterButton>
 
@@ -114,7 +113,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             android:text="233"
-            android:textSize="15sp"
+            android:textSize="14sp"
             app:layout_constraintTop_toBottomOf="@id/commentContainer"
             app:layout_constraintEnd_toEndOf="@id/commentContainer"
        >
