--- a/android/app/src/main/res/layout/fragment_record_board_detail.xml
+++ b/android/app/src/main/res/layout/fragment_record_board_detail.xml
@@ -10,191 +10,199 @@
             type="com.ssafy.zip.android.viewmodel.BoardDetailViewModel" />
     </data>
 
-    <androidx.core.widget.NestedScrollView
+    <RelativeLayout
+        android:id="@+id/rel"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fillViewport="true">
+        android:orientation="vertical"
+        tools:context=".RecordBoardFragment">
 
-        <LinearLayout
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/board_detail_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <com.google.android.material.appbar.MaterialToolbar
+                android:id="@+id/board_detail_appbar"
+                style="@style/Widget.MaterialComponents.Toolbar.Surface"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:minHeight="48dp"
+                android:text="게시글 상세"
+                app:maxButtonHeight="48dp"
+                app:titleCentered="true"
+                app:titleTextAppearance="@style/TextAppearance.AppCompat.Medium" />
+        </com.google.android.material.appbar.AppBarLayout>
+
+        <androidx.core.widget.NestedScrollView
             android:id="@+id/board_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            tools:context=".RecordBoardFragment">
-
-            <!--    조건을 넣어서 , 어떤걸 보여줄지 정하는 느낌?-->
-            <com.google.android.material.appbar.AppBarLayout
-                android:id="@+id/board_detail_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent">
-
-                <com.google.android.material.appbar.MaterialToolbar
-                    android:id="@+id/board_detail_appbar"
-                    style="@style/Widget.MaterialComponents.Toolbar.Surface"
-                    android:layout_width="match_parent"
-                    android:layout_height="48dp"
-                    android:minHeight="48dp"
-                    android:text="게시글 상세"
-                    app:maxButtonHeight="48dp"
-                    app:titleCentered="true"
-                    app:titleTextAppearance="@style/TextAppearance.AppCompat.Medium" />
-            </com.google.android.material.appbar.AppBarLayout>
-
-            <com.google.android.material.divider.MaterialDivider
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                tools:ignore="MissingConstraints">
-
-            </com.google.android.material.divider.MaterialDivider>
+            android:layout_below="@id/board_detail_layout"
+            android:fillViewport="true">
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/topContainer"
+                android:id="@+id/nested_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
+
                 <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/profileContanier"
+                    android:id="@+id/topContainer"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:padding="8dp">
-
-
-                    <com.google.android.material.imageview.ShapeableImageView
-                        android:id="@+id/profileImageDetail"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:adjustViewBounds="true"
-                        android:scaleType="centerCrop"
-                        app:layout_constraintBottom_toBottomOf="@id/profileContanier"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="@id/profileContanier"
-                        app:shapeAppearanceOverlay="@style/circleImageView" />
-
-                    <TextView
-                        android:id="@+id/userNicknameDetail"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="8dp"
-                        android:textColor="@color/black"
-                        android:textSize="15sp"
-                        android:textStyle="bold"
-                        app:layout_constraintBottom_toTopOf="@+id/boardRegDetail"
-                        app:layout_constraintStart_toEndOf="@id/profileImageDetail"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="0.5"
-                        app:layout_constraintVertical_chainStyle="packed" />
-
-                    <TextView
-                        android:id="@+id/boardRegDetail"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="8dp"
-                        android:textSize="10sp"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toEndOf="@id/profileImageDetail"
-                        app:layout_constraintTop_toBottomOf="@+id/userNicknameDetail"
-
-                        app:layout_constraintVertical_bias="0.5" />
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/imageContainer"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:adjustViewBounds="true"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/profileContanier"
-
-                    >
-
-                    <ImageView
-                        android:id="@+id/boardImageDetail"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:adjustViewBounds="true"
-                        tools:ignore="MissingConstraints" />
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-<!--            <com.google.android.material.divider.MaterialDivider-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="1dp"-->
-<!--                tools:ignore="MissingConstraints">-->
-
-<!--            </com.google.android.material.divider.MaterialDivider>-->
-
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/boardContentContainer"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="20dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/topContainer">
-
-                <TextView
-                    android:id="@+id/boardContent"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="8dp"
-                    android:textColor="@color/black"
-                    app:layout_constraintStart_toStartOf="@id/boardContentContainer"
                     app:layout_constraintTop_toTopOf="parent">
 
-                </TextView>
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/profileContanier"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="8dp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent">
 
+
+                        <com.google.android.material.imageview.ShapeableImageView
+                            android:id="@+id/profileImageDetail"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            android:adjustViewBounds="true"
+                            android:scaleType="centerCrop"
+                            app:layout_constraintBottom_toBottomOf="@id/profileContanier"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="@id/profileContanier"
+                            app:shapeAppearanceOverlay="@style/circleImageView" />
+
+                        <TextView
+                            android:id="@+id/userNicknameDetail"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="8dp"
+                            android:textColor="@color/black"
+                            android:textSize="15sp"
+                            android:textStyle="bold"
+                            app:layout_constraintBottom_toTopOf="@+id/boardRegDetail"
+                            app:layout_constraintStart_toEndOf="@id/profileImageDetail"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintVertical_bias="0.5"
+                            app:layout_constraintVertical_chainStyle="packed" />
+
+                        <TextView
+                            android:id="@+id/boardRegDetail"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="8dp"
+                            android:textSize="10sp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintStart_toEndOf="@id/profileImageDetail"
+                            app:layout_constraintTop_toBottomOf="@+id/userNicknameDetail"
+
+                            app:layout_constraintVertical_bias="0.5" />
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/imageContainer"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:adjustViewBounds="true"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/profileContanier"
+
+                        >
+
+                        <ImageView
+                            android:id="@+id/boardImageDetail"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:adjustViewBounds="true"
+                            tools:ignore="MissingConstraints" />
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/boardContentContainer"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/topContainer"
+                    android:padding="20dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/topContainer">
+
+                    <TextView
+                        android:id="@+id/boardContent"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="8dp"
+                        android:textColor="@color/black"
+                        app:layout_constraintStart_toStartOf="@id/boardContentContainer"
+                        app:layout_constraintTop_toTopOf="parent">
+
+                    </TextView>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/comment_recyclerview"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@id/boardContentContainer"
+                    tools:listitem="@layout/comment_item" />
+                <!--  빈 공간, 여백 맞춤               -->
+                <LinearLayout
+                    app:layout_constraintTop_toBottomOf="@+id/comment_recyclerview"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp">
+
+                </LinearLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <com.google.android.material.divider.MaterialDivider
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                tools:ignore="MissingConstraints">
 
-            </com.google.android.material.divider.MaterialDivider>
+        </androidx.core.widget.NestedScrollView>
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/bottomContainer"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:orientation="vertical">
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
                 <EditText
                     android:id="@+id/commentContent"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginEnd="100dp"
-                    android:background="@drawable/edittext_inputtext"
-                    android:hint="@string/edittext_hint"
-                    android:inputType="textMultiLine"
-                    app:layout_constraintBottom_toBottomOf="@+id/bottomContainer"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/bottomContainer"></EditText>
+                    android:layout_weight="1"
+                    android:background="#E0E0E0"
+                    android:gravity="start"
+                    android:hint="댓글 작성하기"
+                    android:padding="10dp"
+                    android:textSize="15sp" />
 
-                <Button
+                <LinearLayout
                     android:id="@+id/commentPostBtn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="4dp"
-                    android:text="전송"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    android:layout_width="50dp"
+                    android:layout_height="match_parent"
+                    android:background="@color/main_color"
+                    android:gravity="center">
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:src="@drawable/ic_baseline_add_24" />
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/comment_recyclerview"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                tools:listitem="@layout/comment_item" />
+                </LinearLayout>
 
+            </LinearLayout>
 
         </LinearLayout>
-    </androidx.core.widget.NestedScrollView>
+    </RelativeLayout>
 </layout>
