--- a/android/app/src/main/res/layout/qna_comment_item.xml
+++ b/android/app/src/main/res/layout/qna_comment_item.xml
@@ -5,10 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:paddingTop="8dp"
     android:background="@drawable/qna_comment_card"
     android:foreground="?android:attr/selectableItemBackground"
     android:orientation="vertical"
+    android:layout_margin="8dp"
     >
 
     <androidx.constraintlayout.widget.ConstraintLayout
