FE_221106_login-ui: 로그인 중앙정렬, 로고 추가 완료
Former-commit-id: 96ccc4d99fe55cd74a5999b9dfd7d31490f9fa3d

--- a/android/app/src/main/res/layout/board_item.xml
+++ b/android/app/src/main/res/layout/board_item.xml
@@ -113,7 +113,7 @@
                 android:textSize="15sp"
                 app:layout_constraintBottom_toBottomOf="@id/commentContainer"
                 app:layout_constraintEnd_toEndOf="@id/commentContainer"
-                app:layout_constraintTop_toTopOf="@id/commentButton">>
+                app:layout_constraintTop_toTopOf="@id/commentButton">
 
             </TextView>
 
