FE_221106_login~signup: 회원가입 ui 수정
Former-commit-id: 1f73f270dd29debb7f197b294c430523fa074334

--- a/android/app/src/main/res/layout/fragment_signup.xml
+++ b/android/app/src/main/res/layout/fragment_signup.xml
@@ -48,6 +48,7 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:orientation="vertical"
+            android:layout_marginBottom="15dp"
             app:layout_constraintBottom_toTopOf="@+id/label_email"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
