FE_221107_fix : 하단 여백 조정 완료, 회색 색 통일 진행중, 게시판 완료
Former-commit-id: 80a05fece06e23ed232c0d5007d60918c6babe39

--- a/android/app/src/main/res/layout/fragment_record_board_detail.xml
+++ b/android/app/src/main/res/layout/fragment_record_board_detail.xml
@@ -180,7 +180,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:background="#E0E0E0"
+                    android:background="@color/grey"
                     android:gravity="start"
                     android:hint="댓글 작성하기"
                     android:padding="10dp"
