--- a/android/app/src/main/res/layout/fragment_record_board_create.xml
+++ b/android/app/src/main/res/layout/fragment_record_board_create.xml
@@ -25,38 +25,19 @@
             app:titleTextAppearance="@style/TextAppearance.AppCompat.Medium" />
     </com.google.android.material.appbar.AppBarLayout>
 
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/profileContainer"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/board_create_layout">
-
-        <Button
-            android:id="@+id/btnPostBoard"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@id/profileContainer"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginEnd="4dp"
-            android:text="게시"/>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
     <EditText
         android:id="@+id/board_content"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/profileContainer"
+        app:layout_constraintTop_toBottomOf="@id/board_create_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textMultiLine"
         android:textSize="14sp"
         android:hint="게시글을 작성해주세요"
+        android:padding="20dp"
+        android:background="@null"
         >
     </EditText>
-
     <ImageView
         android:id="@+id/board_image"
         android:layout_width="match_parent"
@@ -64,21 +45,27 @@
         app:layout_constraintTop_toBottomOf="@id/board_content"
         >
     </ImageView>
-    <LinearLayout
+
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/image_button_container"
-        android:layout_width="wrap_content"
+        android:background="@drawable/layout_top"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        android:padding="10dp">
+
         <androidx.constraintlayout.utils.widget.ImageFilterButton
             android:id="@+id/imageButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:src="@drawable/ic_outline_image_24"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:src="@drawable/ic_baseline_photo_library_24"
-            android:layout_marginBottom="8dp"
-            android:layout_marginStart="4dp">
+            app:layout_constraintTop_toTopOf="parent">
 
 
         </androidx.constraintlayout.utils.widget.ImageFilterButton>
@@ -93,7 +80,17 @@
             android:text="사진 등록하기"
             ></TextView>
 
-    </LinearLayout>
+        <Button
+            android:id="@+id/btnPostBoard"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="4dp"
+            android:text="게시"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 
