--- a/android/app/src/main/res/layout/fragment_record_qna_detail.xml
+++ b/android/app/src/main/res/layout/fragment_record_qna_detail.xml
@@ -28,16 +28,18 @@
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:minHeight="48dp"
-                android:text="백문백답"
                 app:maxButtonHeight="48dp"
                 app:titleCentered="true"
                 app:titleTextAppearance="@style/TextAppearance.AppCompat.Medium" />
         </com.google.android.material.appbar.AppBarLayout>
 
         <androidx.core.widget.NestedScrollView
+            android:id="@+id/qna_scroll_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_below="@id/board_detail_layout"
             android:fillViewport="true">
+
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/fragment_record_qna_detail"
@@ -95,6 +97,8 @@
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
+
+
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/qnaContainer"
                     android:layout_width="match_parent"
@@ -109,6 +113,9 @@
                         android:layout_height="wrap_content"
                         android:textColor="@color/black"
                         android:padding="20dp"
+                        android:textSize="20sp"
+                        android:textStyle="bold"
+                        android:layout_marginBottom="10dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -192,7 +199,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:background="#E0E0E0"
+                    android:background="@color/grey"
                     android:gravity="start"
                     android:hint="답변 작성하기"
                     android:padding="10dp"
