FE_221108_fix : 회원정보 수정, 게시글 이미지 border, 댓글 크게, 홈화면 네비게이션, 회색 연하게
Former-commit-id: 8793ca4bfcd57e540b396710876a098b7699ba78

--- a/android/app/src/main/res/navigation/bottom_bar_nav_graph.xml
+++ b/android/app/src/main/res/navigation/bottom_bar_nav_graph.xml
@@ -15,6 +15,12 @@
         <action
             android:id="@+id/action_homeFragment_to_loginFragment"
             app:destination="@id/loginFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_recordLetterCreateFragment"
+            app:destination="@id/recordLetterCreateFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_recordQnaDetailFragment"
+            app:destination="@id/recordQnaDetailFragment" />
     </fragment>
     <fragment
         android:id="@+id/recordFragment"
