--- a/android/app/src/main/res/layout/comment_item.xml
+++ b/android/app/src/main/res/layout/comment_item.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingTop="8dp"
-    android:background="@color/white"
+    android:background="@drawable/layout_bottom"
     android:foreground="?android:attr/selectableItemBackground"
     android:orientation="vertical">
 
