FE_221108_fix : UI 수정, 회색 연하게
Former-commit-id: b40ba2ad1c68aeb6e7d229a802dcd4c4a46dfed5

--- a/android/app/src/main/res/layout/qna_comment_item.xml
+++ b/android/app/src/main/res/layout/qna_comment_item.xml
@@ -23,10 +23,10 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:scaleType="centerCrop"
             app:shapeAppearanceOverlay="@style/circleImageView"
             android:adjustViewBounds="true"
-            app:layout_constraintBottom_toBottomOf="@id/commentQnaProfileContainer"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@id/commentQnaProfileContainer" />
 
