--- a/android/app/src/main/res/layout/fragment_record_qna_detail.xml
+++ b/android/app/src/main/res/layout/fragment_record_qna_detail.xml
@@ -38,8 +38,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@id/board_detail_layout"
-            android:fillViewport="true">
-
+            android:fillViewport="true"
+            android:layout_marginBottom="60dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/fragment_record_qna_detail"
