--- a/android/app/src/main/res/navigation/bottom_bar_nav_graph.xml
+++ b/android/app/src/main/res/navigation/bottom_bar_nav_graph.xml
@@ -141,6 +141,9 @@
         <action
             android:id="@+id/action_familyEnterFragment_to_familyCreateFragment"
             app:destination="@id/familyCreateFragment" />
+        <action
+            android:id="@+id/action_familyEnterFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
     </fragment>
     <fragment
         android:id="@+id/familyCreateFragment"
